# phpbb_image_resizer

./: LICENSE  README.md  pyproject.toml  resizeall.py
