[tool.poetry]
name = "resizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-resize-image = "^1.1.20"
ipython = "^8.5.0"
piexif = "^1.1.3"
exif = "^1.3.5"
python-slugify = "^6.1.2"
python-magic = "^0.4.27"
black = "^22.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
